syntax = "proto3";

package grpc;

option go_package = "github.com/fabiusinfo/StarWars/proto";

service StarWarsService {
    rpc ConsultPlanet(ConsultRequest) returns (ConsultReply) {}


}


message ConsultRequest {
    string message = 1;
}

message ConsultReply {
    string message = 1;
}

